--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,7 +117,27 @@ textarea::-webkit-input-placeholder { color: #a6a7a8 !important; }
 .has-success .form-control:focus { border-color: #3c763d; outline: 0; -webkit-box-shadow: none; box-shadow: none; }
 .has-error .form-control { border-color: #a94442; background-color: #fff; box-shadow: none; }
 .has-error .form-control:focus { border-color: #a94442; outline: 0; -webkit-box-shadow: none; box-shadow: none; }
-
+.shop-cover {
+    margin-top: -10px;
+    margin-bottom: 10px;
+}
+.shop-profile {
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    border: 3px solid #00aced;
+    background: #fff;
+    padding: 10px;
+}
+.shop-name {
+    position: absolute;
+    bottom: 40px;
+    left: 170px;
+    color: #fff;
+    font-size: 30px;
+    font-weight: bold;
+    text-shadow: 2px 2px 2px #000;
+}
 /*-------------- align ------------*/
 
 /* =WordPress Core
