--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,6 +121,16 @@ textarea::-webkit-input-placeholder { color: #a6a7a8 !important; }
     margin-top: -10px;
     margin-bottom: 10px;
 }
+.company-category {
+    border-bottom: 1px solid #888;
+}
+.company-cat {
+    background: #fff;
+}
+.cc {
+    border-bottom: 1px solid #ccc;
+    padding: 1px ;
+}
 .shop-profile {
     position: absolute;
     bottom: 30px;
@@ -398,7 +408,7 @@ a img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 #navigation.align-center>ul>li { display: inline-block; float: none; }
 #navigation.align-center ul ul { text-align: left; }
 #navigation.align-right>ul>li { float: right; }
-#navigation>ul>li>a { padding: 12px 38px; font-size: 13px; color: #666; letter-spacing: 1px; text-decoration: none;   }
+#navigation>ul>li>a { padding: 12px 26px; font-size: 13px; color: #666; letter-spacing: 1px; text-decoration: none;   }
 #navigation>ul>li:hover>a { color: #fff; background-color: #55acef; }
 #navigation>ul>li.has-sub>a { padding-right: 52px; }
 
