--- a/public/css/style.css
+++ b/public/css/style.css
@@ -390,7 +390,7 @@ a img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 .account-section { line-height: 53px; }
 .account-section ul { padding-left: 20px; }
 .account-section ul li { float: left; }
-.account-section ul li a {font-size: 13px; color: #848687; padding: 0px 8px;}
+.account-section ul li a {font-size: 13px; color: #000; padding: 0px 8px;}
 .account-section ul li a:hover { color: #01579B; }
 .cart-quantity { background-color: #fb730f; padding: 4px 6px; color: #fff; border-radius: 2px; line-height: 1; display: inline-block; }
 
@@ -408,7 +408,7 @@ a img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 #navigation.align-center>ul>li { display: inline-block; float: none; }
 #navigation.align-center ul ul { text-align: left; }
 #navigation.align-right>ul>li { float: right; }
-#navigation>ul>li>a { padding: 12px 26px; font-size: 13px; color: #666; letter-spacing: 1px; text-decoration: none;   }
+#navigation>ul>li>a { padding: 12px 26px; font-size: 13px; color: #000; text-decoration: none;   }
 #navigation>ul>li:hover>a { color: #fff; background-color: #55acef; }
 #navigation>ul>li.has-sub>a { padding-right: 52px; }
 
@@ -510,7 +510,7 @@ a img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 .footer-widget { margin-bottom: 60px; }
 .footer-widget ul { margin-bottom: 25px; }
 .footer-widget ul li { line-height: 1.4; margin-bottom: 10px; }
-.footer-widget ul li a { font-size: 14px; color: #848687; letter-spacing: 0px; font-weight: 400; line-height: 0; }
+.footer-widget ul li a { font-size: 14px; color: #000; letter-spacing: 0px; font-weight: 400; line-height: 0; }
 .footer-widget ul li a:hover { color: #0cafe5; }
 .contact-info { margin-bottom: 12px; font-size: 14px; }
 .contact-icon { width: 28px; float: left; color: #0cafe5; }
