--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,8 +68,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 /*----------------------------------
     1. Body / Typography
 ----------------------------------*/
-body { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; font-family: 'Roboto Condensed', sans-serif; letter-spacing: 0px; font-size: 13px; color: #848687; line-height: 30px; background-color: #f4f4f4; }
-h1, h2, h3, h4, h5, h6 { color: #1c1e1e; margin: 0px 0px 15px 0px; font-weight: 400; font-family: 'Roboto Condensed', sans-serif; }
+body { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; font-family: 'Roboto Condensed', sans-serif; letter-spacing: 0px; font-size: 13px; color: #000; line-height: 30px; background-color: #f4f4f4; }
+h1, h2, h3, h4, h5, h6 { color: #000; margin: 0px 0px 15px 0px; font-weight: 400; font-family: 'Roboto Condensed', sans-serif; }
 h1 { font-size: 30px; line-height: 42px; }
 h2 { font-size: 24px; line-height: 32px; }
 h3 { font-size: 22px; line-height: 30px; }
