--- a/public/css/style.css
+++ b/public/css/style.css
@@ -431,7 +431,7 @@ a img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 #navigation li:hover>ul>li { height: 33px; }
 #navigation ul ul ul { margin-left: 100%; top: 0; }
 #navigation.align-right ul ul ul { margin-left: 0; margin-right: 100%; }
-#navigation ul ul li a { background-color: #0796c5; padding: 10px; width: 216px; font-size: 12px; text-decoration: none; color: #fff; letter-spacing: 1px; border-bottom: #068bb7 1px solid; margin-left: 1px; }
+#navigation ul ul li a { background-color: #0796c5; padding: 10px; width: 216px; font-size: 12px; text-decoration: none; color: #fff; border-bottom: #068bb7 1px solid; margin-left: 1px; }
 #navigation ul ul li:first-child>a { border-top-right-radius: 0%; }
 #navigation ul ul li:last-child>a { border-bottom-right-radius: 0%px; border-bottom-left-radius: 0%px; }
 #navigation ul ul li:last-child>a, #navigation ul ul li.last-item>a { border-bottom: none; }
