--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,7 +80,7 @@ p { margin: 0 0 24px; line-height: 1.8; }
 p:last-child { margin: 0px; }
 ul, ol { list-style: none; margin: 0; padding: 0; }
 a { text-decoration: none; color: #1c1e1e; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; transition: all 0.3s; }
-a:focus, a:hover { text-decoration: none; color: #fb730f; }
+a:focus, a:hover { text-decoration: none; color: #0056b3; }
 sub { bottom: 0em; }
 .lead { font-size: 21px; font-weight: 400; line-height: 1.6; font-family: 'Roboto Condensed', sans-serif; color: #1c1e1e; margin-bottom: 30px; }
 blockquote { padding: 10px 32px; margin: 0 0 30px; font-size: 17.5px; border-left: 5px solid #fb730f; }
@@ -89,19 +89,18 @@ blockquote { padding: 10px 32px; margin: 0 0 30px; font-size: 17.5px; border-lef
 .blockquote-text { font-family: 'Roboto Condensed', sans-serif; color: #1c1e1e; font-weight: 400; font-size: 20px; line-height: 1.6; }
 .blockquote-author { font-weight: 400; font-size: 14px; text-transform: capitalize; color: #fff; }
 strong { color: #1c1e1e; }
-hr { border-top: 1px solid #e8ecf0; margin-bottom: 40px; margin-top: 40px; }
+hr { border-top: 1px solid #e8ecf0;}
 
 /*-----------------------
     2 Form Elements:
 -------------------------*/
 label { }
 .control-label { font-size: 13px; text-transform: capitalize; color: #3c424b; margin-bottom: 10px; text-transform: uppercase; letter-spacing: 1px; }
-.form-control:focus { }
+
 .textarea.form-control { }
 .required { }
 .form-group { margin-bottom: 5px; }
-.form-control { border-radius: 3px; color: #656869; font-size: 13px; width: 100%; height: 40px; line-height: 1; border: 2px solid #e8ecf0; background-color: #fff; letter-spacing: 1px; margin-bottom: 10px; -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075); box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075); }
-.form-control:focus { border-color: #a5a8ab; outline: 0; -webkit-box-shadow: none; box-shadow: none; }
+.form-control { font-size: 13px; }
 .input-group { position: relative; display: table; border-collapse: separate; }
 input[type=checkbox], input[type=radio] { margin: 8px 0 0; margin-top: 1px\9; line-height: normal; }
 input::-webkit-input-placeholder {color: #a6a7a8 !important; opacity: 1; }
@@ -174,14 +173,10 @@ a img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 /*-----------------------------------
     3. Buttons 
 -----------------------------------*/
-.btn { font-family: 'Roboto Condensed', sans-serif; font-size: 15px; text-transform: uppercase; font-weight: 700; padding: 14px 26px; border-radius: 4px; line-height: 2; letter-spacing: 2px; border: transparent; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; transition: all 0.3s; word-wrap: break-word; white-space: normal !important; }
-.btn-primary.focus, .btn-primary:focus { background-color: #ed6908; color: #fff; }
-.btn-default { background-color: #0cafe5; color: #fff; }
-.btn-default:hover { background-color: #0e9bc9; color: #fff; }
-.btn-default.focus, .btn-default:focus { background-color: #0e9bc9; color: #fff; }
+.btn { font-size: 15px; font-weight: 700; border-radius: 4px; line-height: 2; border: transparent; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; transition: all 0.3s; word-wrap: break-word; white-space: normal !important; }
 .btn-lg { padding: 16px 36px; font-size: 16px; }
 .btn-sm { padding: 12px 22px; font-size: 12px; }
-.btn-xs { padding: 10px 14px; font-size: 11px; }
+.btn-xs {font-size: 11px; }
 .btn-white { color: #13387c; background: #fff; margin-bottom: -10px; }
 .btn-white:hover { background-color: #fff; color: #13387c; }
 .btn-white.focus, .btn-white:focus { background-color: #fff; color: #19202b; }
@@ -411,7 +406,6 @@ a img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 #navigation>ul>li>a { padding: 12px 21px; font-size: 13px; color: #000; text-decoration: none;   }
 #navigation>ul>li:hover>a { color: #fff; background-color: #55acef; }
 #navigation>ul>li.has-sub>a { padding-right: 52px; }
-
 /*#navigation>ul>li>a:after {
    position: absolute;
    top: 16px;
@@ -562,7 +556,7 @@ a img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 .showcase-block:hover { background-color: #fff; -webkit-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.75); -moz-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.10); box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.10); }
 .showcase-block.active { background-color: #fff; -webkit-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.75); -moz-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.10); box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.10); }
 .product-block { border: 1px solid #f3f5f7; text-align: center; background-color: #fff; min-height: 320px; }
-.product-img { padding: 15px; margin-bottom: 10px; min-height: 180px; }
+.product-img { padding: 10px; min-height: 180px; }
 .product-content { border-top: 1px solid #f3f5f7; padding: 10px; }
 .product-title { color: #848687; font-size: 13px; }
 .product-content h5 { margin-bottom: 5px; }
@@ -604,7 +598,12 @@ a img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 #cssmenu>ul>li.active>a { background: #fff; border-bottom: #e8eaec 2px solid; color: #1c1e1e; }
 #cssmenu>ul>li.has-sub>a:after { content: '\f067'; position: absolute; top: 18px; right: 14px; font-family: 'FontAwesome'; font-size: 12px; color: #848687; }
 #cssmenu>ul>li.has-sub.active>a:after { content: '\f068'; position: absolute; right: 14px; top: 18px; font-family: 'FontAwesome'; color: #848687; font-size: 12px; }
-
+.ec {
+    padding: 5px;
+}
+.card-c {
+    border-radius: 0;
+}
 /* Sub menu */
 #cssmenu ul ul { padding: 0; display: none; margin-top: 15px; }
 #cssmenu ul ul a { background: #fff; display: block; color: #848687; font-size: 14px; text-transform: capitalize; font-weight: 700; padding: 6px 0px; }
@@ -769,9 +768,8 @@ h5 { font-size: 14px; color: #1c1e1e; text-transform: uppercase; line-height: 1;
 Login Form 
 ----------------------------------*/
 .login-input { position: relative; margin-bottom: -21px; }
-.login-input .form-control { background-color: #f4f7f9; padding-left: 35px; }
-.login-icon { display: inline-block; position: relative; bottom: 51px; left: 18px; font-size: 14px }
-.eye-icon { position: absolute; bottom: 52px; right: 18px; font-size: 14px }
+.login-input .form-control { padding-left: 35px; }
+.login-icon { display: inline-block; position: relative; bottom: 32px; left: 18px;}
 .btn-social-rectangle, .btn-facebook .btn-twitter .btn-googleplus { font-size: 14px; margin-right: 6px; display: inline-block; line-height: 1.2; padding: 14px 16px; margin-bottom: 10px; border-radius: 3px; }
 .social-text { font-size: 14px; text-transform: uppercase; padding-left: 6px; letter-spacing: 1px; }
 
@@ -814,13 +812,6 @@ Class----------------
 .meta-link:hover { color: #8efdae }
 
 /*----- pagination -----*/
-.pagination { display: inline-block; padding-left: 0; margin: 20px 0; }
-.st-pagination { margin-top: 30px; text-align: center; }
-.st-pagination .pagination>li>a, .pagination>li>span { position: relative; float: left; line-height: 1.8; color: #fff; text-decoration: none; letter-spacing: 2px; font-size: 12px; border-radius: 3px; border: 1px solid #9fa3a7; background-color: #9fa3a7; font-weight: 700; text-transform: uppercase; margin-right: 8px; margin-bottom: 5px; }
-.st-pagination .pagination>li>a:focus, .st-pagination .pagination>li>a:hover, .st-pagination .pagination>li>span:focus, .st-pagination .pagination>li>span:hover { z-index: 2; color: #fff; background-color: #fb730f; border: #fb730f 1px solid; }
-.st-pagination .pagination>li:first-child>a, .st-pagination .pagination>li:first-child>span { margin-left: 0; border-radius: 3px; }
-.st-pagination .pagination>li:last-child>a, .st-pagination .pagination>li:last-child>span { border-radius: 3px; }
-.st-pagination .pagination>.active>a, .st-pagination .pagination>.active>a:focus, .st-pagination .pagination>.active>a:hover, .st-pagination .pagination>.active>span, .st-pagination .pagination>.active>span:focus, .st-pagination .pagination>.active>span:hover { z-index: 3; color: #fff; cursor: default; background-color: #fb730f; border: 1px solid #fb730f; }
 .related-post-block { margin-bottom: 30px; background-color: #fff; padding: 30px; }
 .related-title { font-weight: 700; margin-bottom: 5px; }
 .related-post-title { padding: 16px 30px; margin-bottom: 0px; font-size: 22px; }
@@ -1013,4 +1004,26 @@ ul.timeline > li > .tldate { margin: 0; }
 ul.timeline > li > .timeline-panel { float: right; }
 ul.timeline > li > .timeline-panel:before { border-left-width: 0; border-right-width: 15px; left: -15px; right: auto; }
 ul.timeline > li > .timeline-panel:after { border-left-width: 0; border-right-width: 14px; left: -14px; right: auto; }
+}
+.pagination {
+	margin-bottom: 30px;
+  }
+
+.pagination .active >span {
+	background: #fff;
+	padding: 5px 11px;
+}
+
+.pagination > li > span{
+  border: 1px solid #e7e7e7;
+	padding: 5px 11px;
+	background: #f7f7f7;
+	margin: 2px;
+}
+.pagination > li > a{
+    border: 1px solid #d7d7d7;
+    padding: 5px 11px;
+    background: #d7d7d7;
+	color: #666;
+	margin: 2px;
 }
